--- a/src/components/UI/HeaderMain/HeaderMain.module.css
+++ b/src/components/UI/HeaderMain/HeaderMain.module.css
@@ -1,13 +1,14 @@
 .header{
     background-color: white;
     width: 100%;
+    border-bottom: #e7ebee solid;
 }
 .main_name{
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     display: flex;
 }
 .header_div{
     margin: 0 auto;
-    width: 1040px;
+    width: 1400px;
 }
