--- a/src/components/UI/HeaderMain/HeaderMain.module.css
+++ b/src/components/UI/HeaderMain/HeaderMain.module.css
@@ -9,6 +9,8 @@
     display: flex;
 }
 .header_div{
+    justify-content: space-between;
+    display: flex;
     margin: 0 auto;
     width: 1400px;
 }
