--- a/src/components/Finish/Finish.module.css
+++ b/src/components/Finish/Finish.module.css
@@ -25,6 +25,7 @@
 	margin: 0;
 }
 .download{
+    
     padding-top: 30px;
     display: flex;
     justify-content: center;
@@ -43,7 +44,7 @@
     height: 40px;
     background-color: #ff3a37;
     border-radius: 30px;
-    border: none;
+    border: none;cursor: pointer;
 }
 .download button:hover{
     background-color: #ff6b69;
@@ -83,6 +84,7 @@
     display: flex;
 }
 .sections span{
+    padding-top: 4px;
     padding-left: 10px;
     font-size: 17px;
     font-weight: 600;
@@ -91,3 +93,67 @@
     position: absolute;
     top: 50%;
 }
+/*  */
+.button {
+    margin-top: 50px;
+    width: 100%;
+    height: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
+    background: #ff3a37;
+   }
+   
+   .button span {
+       padding-left: 50px;
+    transition: 200ms;
+   }
+   
+   .button .text {
+    
+    font-size: 20px;
+    transform: translateX(35px);
+    color: white;
+    font-weight: 500;
+   }
+   
+   .button .icon {
+    padding-left: 220px;
+    position: absolute;
+    transform: translateX(110px);
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   }
+   
+   .button img {
+    width: 35px;
+    fill: #eee;
+   }
+   
+   .button:hover {
+    background: #fd524f;
+   }
+   
+   .button:hover .text {
+    color: transparent;
+   }
+   
+   .button:hover .icon {
+       padding-left: 180px;
+    border-left: none;
+    transform: translateX(0);
+   }
+   
+   .button:focus {
+    outline: none;
+   }
+   
+   .button:active .icon img {
+    transform: scale(0.8);
+   }
