--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -22,6 +22,12 @@
 	padding: 0;
     margin: 0;
 }
+.experience_text span {
+    color: rgb(150, 155, 158);
+    width: 600px;
+    font-size: 16px;
+    line-height: 24px;
+ }
 .pAndInput{
     margin: 0;
 }
