--- a/src/components/ResumePreview/ResumePreview.module.css
+++ b/src/components/ResumePreview/ResumePreview.module.css
@@ -10,7 +10,15 @@
 	padding: 40px 0 0 0;
 }
 .contacts_item {
+	display: block;
+	width: 155px;
 	display: flex;
+	flex-wrap: wrap;
+}
+.contacts_item samp{
+	
+	display: flex;
+	flex-wrap: wrap;
 }
 .icon {
 	margin-right: 2px;
@@ -21,7 +29,6 @@
 .header_contact {
 	color: white;
 	background-color: #d0021b;
-	height: 150px;
 	width: 100%;
 }
 .container {
@@ -32,14 +39,15 @@
 	z-index: 10;
 }
 .name {
+	word-break:break-all;
 	font-size: 20px;
 	text-transform: uppercase;
 }
 .contact_description {
 	margin: 0 auto;
 	width: 445px;
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 }
 .description {
 	padding-left: 10px;
@@ -49,10 +57,15 @@
 	line-height: 18px;
 }
 .container_description {
-	border-left: white solid;
-	height: 150px;
+	display: block;
+	word-break:break-all;
+	flex-wrap: wrap;
+	padding-bottom: 30px;
+	border-left: white solid 3px;
+	margin-left: 50px;
 }
 .state_index {
+	display: flex;
 	line-height: 10px;
 }
 .experience {
@@ -61,6 +74,7 @@
 	width: 445px;
 }
 .state_index samp {
+	padding-top: 5px;
 	padding-left: 3px;
 }
 .main_text {
@@ -71,6 +85,7 @@
 	font-weight: 700;
 }
 .main_description {
+	word-break:break-all;
 	padding-top: 5px;
 }
 .main_description span {
@@ -78,6 +93,7 @@
 	padding: 0;
 	font-size: 12px;
 	font-weight: 600;
+	padding-left: 5px;
 	padding-left: 5px;
 }
 .main_description p {
