--- a/src/components/UI/Constructor/Constructor.module.css
+++ b/src/components/UI/Constructor/Constructor.module.css
@@ -1,23 +1,24 @@
-.container{
-    margin-top: 15px;
-    display: flex;
-    justify-content: center;
+.container {
+   display: flex;
+   justify-content: center;
+   cursor: pointer;
 }
-.constructor{
-    color: white;
-    background-color: #ff514e;
-    border-radius: 5px;
-    font-size: 14px;
-    font-weight: 700;
-    padding: 16px 32px;
-    height: 60px;
-    width: 350px;
-    text-align: center;
+.constructor {
+   margin-top: 15px;
+   color: white;
+   background-color: #ff514e;
+   border-radius: 5px;
+   font-size: 14px;
+   font-weight: 700;
+   padding: 16px 32px;
+   height: 60px;
+   width: 350px;
+   text-align: center;
 }
-.icon_construct{
-    margin-right: 43px;
-    width: 19px;
+.icon_construct {
+   margin-right: 43px;
+   width: 19px;
 }
-.cta{
-    
+.constructor:hover {
+   background-color: #ff7775;
 }
