--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -138,7 +138,11 @@
    font-weight: 700;
 }
 .buttons {
-   padding-top: 30px;
+   border-top: rgb(129, 129, 129) solid 2px;
+   position: fixed;
+   top: 640px;
+   background-color: rgb(255, 255, 255);
+   padding-top: 10px;
    width: 600px;
    display: flex;
    justify-content: space-between;
