--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -26,8 +26,7 @@
 }
 .Ltstext {
    color: rgb(150, 155, 158);
-   width: 600px;
-   font-size: 16px;
+   font-size: 12px;
    line-height: 24px;
 }
 .pAndInput {
@@ -51,6 +50,7 @@
    justify-content: space-between;
 }
 .city input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 250px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -73,6 +73,7 @@
    font-weight: 700;
 }
 .state input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 150px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -89,6 +90,7 @@
    font-weight: 700;
 }
 .Zipcode input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 180px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -105,6 +107,7 @@
    font-weight: 700;
 }
 .email input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 330px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -122,6 +125,7 @@
 }
 
 .phone input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 258px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -178,4 +182,11 @@
 }
 .next:hover {
    background-color: #fd6f6c;
+}
+.document_contaner{
+	width: 700px;
+	background-color: #e2e2e2;
+	border-left: #b9b9b9 solid 10px;
+	border-right: #b9b9b9 solid 10px;
+	padding: 60px 0 40px 0;
 }
