--- a/src/components/Education/Education.module.css
+++ b/src/components/Education/Education.module.css
@@ -12,6 +12,13 @@
    width: 600px;
    color: #333;
 }
+.document_contaner{
+	width:700px;
+	background-color: #e2e2e2;
+	border-left: #b9b9b9 solid 10px;
+	border-right: #b9b9b9 solid 10px;
+	padding: 60px 0 40px 0;
+}
 .education_text {
    line-height: 40px;
    margin-bottom: 10px;
@@ -48,6 +55,7 @@
    justify-content: space-between;
 }
 .city input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 350px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -70,6 +78,7 @@
    font-weight: 700;
 }
 .state input {
+   padding: 16.5px 18.5px 12.5px 18.5px;
    width: 240px;
    color: hsl(200, 5%, 12%);
    height: 45px;
@@ -95,7 +104,7 @@
    width: 600px;
    display: flex;
    justify-content: space-between;
-   padding-bottom: 20px;
+   padding-bottom: 40px;
 }
 .logout {
    border-radius: 2px;
@@ -157,11 +166,13 @@
    font-weight: 600;
 }
 .checkbox_style input {
+
    width: 17px;
    height: 17px;
 }
 .pAndTextArea {
    margin: 0;
+   padding-bottom: 100px;
 }
 .pAndTextArea textarea {
    min-height: 160px;
@@ -182,7 +193,6 @@
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 18px;
-   /* font-size: small; */
    font-weight: 700;
 }
 .options select {
